# LambdaFFT

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO
cmake/: FindCheck.cmake
src/: CMakeLists.txt  lfft.h  lfft_config.h  lfft_fft.c  lfft_fft2.h
src/core/: lfft_fft.h  lfft_fft2.c
tests/: CMakeLists.txt  lfft_tests.c
